bindings/include/klu.h

typedef struct klu_l_symbolic_struct         /* 64-bit version (otherwise same as above) */
{
    double symmetry, est_flops, lnz, unz ;
    double *Lnz ;
    SuiteSparse_long n, nz, *P, *Q, *R, nzoff, nblocks, maxblock, ordering,
        do_btf, structural_rank ;

} klu_l_symbolic ;
typedef struct klu_l_numeric_struct      /* 64-bit version (otherwise same as above) */
{
    SuiteSparse_long n, nblocks, lnz, unz, max_lnz_block, max_unz_block, *Pnum,
        *Pinv, *Lip, *Uip, *Llen, *Ulen ;
    void **LUbx ;
    size_t *LUsize ;
    void *Udiag ;
    double *Rs ;
    size_t worksize ;
    void *Work, *Xwork ;
    SuiteSparse_long *Iwork ;
    SuiteSparse_long *Offp, *Offi ;
    void *Offx ;
    SuiteSparse_long nzoff ;

} klu_l_numeric ;
typedef struct klu_l_common_struct /* 64-bit version (otherwise same as above)*/
{

    double tol, memgrow, initmem_amd, initmem, maxwork ;
    SuiteSparse_long btf, ordering, scale ;
    SuiteSparse_long (*user_order) (SuiteSparse_long, SuiteSparse_long *,
        SuiteSparse_long *, SuiteSparse_long *,
        struct klu_l_common_struct *) ;
    void *user_data ;
    SuiteSparse_long halt_if_singular ;
    SuiteSparse_long status, nrealloc, structural_rank, numerical_rank,
        singular_col, noffdiag ;
    double flops, rcond, condest, rgrowth, work ;
    size_t memusage, mempeak ;

} klu_l_common ;
SuiteSparse_long klu_l_defaults (klu_l_common *Common) ;
klu_l_symbolic *klu_l_analyze (SuiteSparse_long, SuiteSparse_long *,
    SuiteSparse_long *, klu_l_common *Common) ;
klu_l_symbolic *klu_l_analyze_given (SuiteSparse_long, SuiteSparse_long *,
    SuiteSparse_long *, SuiteSparse_long *, SuiteSparse_long *,
    klu_l_common *) ;
/* long / real version */
klu_l_numeric *klu_l_factor (SuiteSparse_long *, SuiteSparse_long *, double *,
    klu_l_symbolic *, klu_l_common *) ;
/* long / complex version */
klu_l_numeric *klu_zl_factor (SuiteSparse_long *, SuiteSparse_long *, double *,
    klu_l_symbolic *, klu_l_common *) ;
SuiteSparse_long klu_l_solve (klu_l_symbolic *, klu_l_numeric *,
    SuiteSparse_long, SuiteSparse_long, double *, klu_l_common *) ;
SuiteSparse_long klu_zl_solve (klu_l_symbolic *, klu_l_numeric *,
    SuiteSparse_long, SuiteSparse_long, double *, klu_l_common *) ;
SuiteSparse_long klu_l_tsolve (klu_l_symbolic *, klu_l_numeric *,
    SuiteSparse_long, SuiteSparse_long, double *, klu_l_common *) ;
SuiteSparse_long klu_zl_tsolve (klu_l_symbolic *, klu_l_numeric *,
    SuiteSparse_long, SuiteSparse_long, double *, SuiteSparse_long,
    klu_l_common * ) ;
SuiteSparse_long klu_l_refactor (SuiteSparse_long *, SuiteSparse_long *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_zl_refactor (SuiteSparse_long *, SuiteSparse_long *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_l_free_symbolic (klu_l_symbolic **, klu_l_common *) ;
SuiteSparse_long klu_l_free_numeric (klu_l_numeric **, klu_l_common *) ;
SuiteSparse_long klu_zl_free_numeric (klu_l_numeric **, klu_l_common *) ;
SuiteSparse_long klu_l_sort (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_zl_sort (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_l_flops (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_zl_flops (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_l_rgrowth (SuiteSparse_long *, SuiteSparse_long *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_zl_rgrowth (SuiteSparse_long *, SuiteSparse_long *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_l_condest (SuiteSparse_long *, double *, klu_l_symbolic *,
    klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_zl_condest (SuiteSparse_long *, double *, klu_l_symbolic *,
    klu_l_numeric *, klu_l_common *) ;
SuiteSparse_long klu_l_rcond (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_zl_rcond (klu_l_symbolic *, klu_l_numeric *,
    klu_l_common *) ;
SuiteSparse_long klu_l_scale (SuiteSparse_long, SuiteSparse_long,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    double *, SuiteSparse_long *, klu_l_common *) ;
SuiteSparse_long klu_zl_scale (SuiteSparse_long, SuiteSparse_long,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    double *, SuiteSparse_long *, klu_l_common *) ;
SuiteSparse_long klu_l_extract (klu_l_numeric *, klu_l_symbolic *,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    SuiteSparse_long *, klu_l_common *) ;
SuiteSparse_long klu_zl_extract (klu_l_numeric *, klu_l_symbolic *,
    SuiteSparse_long *, SuiteSparse_long *, double *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *, double *,
    SuiteSparse_long *, SuiteSparse_long *, double *,
    SuiteSparse_long *, klu_l_common *) ;
void *klu_l_malloc (size_t, size_t, klu_l_common *) ;
void *klu_l_free (void *, size_t, size_t, klu_l_common *) ;
void *klu_l_realloc (size_t, size_t, size_t, void *, klu_l_common *) ;